<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info" />
    </group>
</menu>