<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ordinalNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/ordinal_number"
            android:textColor="@color/tv_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/understand"
                android:textColor="@color/red_three"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWordDefinition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_slab"
                android:lineSpacingExtra="2dp"
                android:text="@string/word_definition"
                android:textColor="@color/tv_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvWordExample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_slab"
                android:lineSpacingExtra="2dp"
                android:text="@string/word_example"
                android:textColor="@color/black_60"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:dividerColor="@color/light_gray" />

</LinearLayout>